# Programacion-funcional

guia 1/: ejercicios.txt  ejercicios_adicionales.hs  guia1.hs
guia 2/: guia2.hs
guia_10/: EjsNExp.hs  EjsRowbstones.hs  Memoria.hs  NExp.hs  Rowbstones.hs  TableroR.hs  adicionales.hs
guia_11/: adicionales.hs  folderre.hs  lists.hs  pizza.hs
guia_12/: Bst23.hs  EA.hs  ExpA.hs  FileSystem.hs  GTree.hs  Mapa.hs  SQL.hs  Tree.hs
guia_13/: EnvBFS.hs  MonadSeq.hs  adicionales.hs
guia_13/PF_Practica_13 - Monadas - ArchivosHS/Ejercicio1.ghi/: CHANGELOG.md  Ejercicio1.cabal
guia_13/PF_Practica_13 - Monadas - ArchivosHS/Ejercicio1.ghi/app/: ErrorMonad.hs  Eval.hs  Main.hs  MaybeMonad.hs  MiFalla.hs  Monadas.hs  OutputErrorMonad.hs  OutputMonad.hs  PowerOutputMonad.hs  RevOutputMonad.hs
guia_13/PF_Practica_13 - Monadas - ArchivosHS/Ejercicio3.ghci/: ListMem.hs  Main.hs  Mem.hs  Monadas.hs  RNExp.hs  ReaderMonad.hs
guia_3/: ej1.hs  ej2.hs  ej5.hs  ej7.hs  ej9.hs
guia_5/: ej2.hs  ej3.hs  ej4.hs  ej7.hs  ej8.hs
guia_7/: dungeon.hs  pizza.hs  planilla.hs
guia_8/: S1.e1.hs  S2.hs  S3.hs  s1.e1.hs  s2.hs  s3.hs
guia_9/: AppList.hs  EA.hs  QuadTree.hs
